--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,8 @@
 PORT=5000
 
 DB=mongodb+srv://ameenabegum140:ameenabegum140@cluster0.ambkawm.mongodb.net/Elearning?retryWrites=true&w=majority&appName=Cluster0
+
+Activation_Secret=djksajfdoisoefn12423
+
+Password=mdrwspxlrvbsswqr
+Gmail=ameenabegum140@gmail.com
