--- a/server/package.json
+++ b/server/package.json
@@ -85,6 +85,7 @@
     "negotiator": "^1.0.0",
     "node-addon-api": "^8.5.0",
     "node-gyp-build": "^4.8.4",
+    "nodemailer": "^7.0.5",
     "normalize-path": "^3.0.0",
     "object-inspect": "^1.13.4",
     "on-finished": "^2.4.1",
